--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.38.0",
+    "framer-motion": "^11.1.7",
     "next": "14.2.2",
     "next-sanity": "^7.1.4",
     "react": "^18",
@@ -22,10 +23,12 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/three": "^0.163.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "three": "^0.164.1",
     "typescript": "^5"
   }
 }
