--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio",
+  "name": "Portfolio",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,26 +9,42 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@sanity/image-url": "^1.0.2",
-    "@sanity/vision": "^3.38.0",
-    "framer-motion": "^11.1.7",
-    "next": "14.2.2",
-    "next-sanity": "^7.1.4",
+    "@emailjs/browser": "^4.3.3",
+    "@iconify/react": "^5.0.1",
+    "@react-three/drei": "^9.121.4",
+    "@react-three/fiber": "^8.17.14",
+    "@types/three": "^0.172.0",
+    "@vercel/analytics": "^1.3.1",
+    "@vercel/speed-insights": "^1.0.12",
+    "axios": "^1.7.9",
+    "blobity": "^0.2.3",
+    "dotenv": "^16.4.5",
+    "framer-motion": "^11.2.10",
+    "gray-matter": "^4.0.3",
+    "intersection-observer": "^0.12.2",
+    "lottie-react": "^2.4.1",
+    "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
-    "sanity": "^3.38.0",
-    "styled-components": "^6.1.8"
+    "react-hook-form": "^7.52.1",
+    "react-icons": "^5.2.1",
+    "react-intersection-observer": "^9.10.3",
+    "react-markdown": "^9.0.3",
+    "react-toastify": "^10.0.5",
+    "remark": "^15.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-html": "^16.0.1",
+    "three": "^0.172.0",
+    "three-stdlib": "^2.35.13"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/three": "^0.163.0",
     "eslint": "^8",
-    "eslint-config-next": "14.2.2",
+    "eslint-config-next": "14.2.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "three": "^0.164.1",
     "typescript": "^5"
   }
 }
