--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,9 +19,14 @@
     ],
     "paths": {
       "@/*": ["./*"]
-    },
-    "target": "ES2017"
+    }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "app/loading.jsx"
+  ],
   "exclude": ["node_modules"]
 }
